tests/types_first_reasons/temporary_number_dep.js
// @flow

const x = require('./temporary_number');
(x: 0); // error: 42 ~> 0
